--- a/help/_posts/1970-01-01-raspbian.md
+++ b/help/_posts/1970-01-01-raspbian.md
@@ -92,7 +92,7 @@ deb http://{%endraw%}{{ site.hostname }}{%raw%}/raspberrypi/ {{release_name}} ma
 本文档内容的原始版本由 Raspberry Pi
 中文社区“树莓爱好者论坛”提供。按照[知识共享署名-非商业性使用
 3.0
-中国大陆许可协议](http://creativecommons.org/licenses/by-nc/3.0/cn/)授权清华大学镜像站使用。
+中国大陆许可协议](http://creativecommons.org/licenses/by-nc/3.0/cn/)授权IMAU镜像站使用。
 
 TUNA 提供的修改版本同样使用[知识共享署名-非商业性使用
 3.0
